Bug 301392 - birds-eye view extends to above the window when viewing a very tall image
Summary: birds-eye view extends to above the window when viewing a very tall image
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Benni Hill
URL:
Keywords:
: 301465 310175 313738 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-07 19:06 UTC by Albert Hofkamp
Modified: 2013-01-23 15:34 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Hofkamp 2012-06-07 19:06:21 UTC
I had a very large/high image http://code.google.com/p/freerct/source/browse/trunk/sprites_src/tracks/cars/template_allangle8bpp128.png
and gwenview that did not cover the entire screen (the top 1/4 was not used).

When zooming, the birds-eye appeared, using it, I could drag up from the bottom to the top of the image, and the image scrolled in the other direction as expected.
At the top of the window however, I could continue dragging to above and outside the window due to the big height of the image.



Reproducible: Always

Steps to Reproduce:
1. Put the image at your file system
2. Open dolphin, and click the image to load it into gwenview (non-full screen)
3. zoom to around 100%
4. grab the birds-eye view rectangle, and drag it up.
5. when you reach the top of the window, have not reached the top of the image
Actual Results:  
you can continue move upwards until you hit the top of the screen (or the top of the image probably). The birds-eye view rectangle becomes unavailable.

Expected Results:  
I would expect the top of the window to be the top of the image.

In particular, when you let go of the mouse button, the birds-eye view is out of reach.
Comment 1 Jekyll Wu 2012-07-08 01:28:00 UTC
*** Bug 301465 has been marked as a duplicate of this bug. ***
Comment 2 Benni Hill 2012-12-01 03:22:49 UTC
https://git.reviewboard.kde.org/r/107538/
Comment 3 Benni Hill 2012-12-01 19:54:22 UTC
*** Bug 310175 has been marked as a duplicate of this bug. ***
Comment 4 Benni Hill 2012-12-05 17:44:01 UTC
Git commit a1b818def1e77c82fba7379cd4a5c589b0bf1896 by Benjamin Löwe.
Committed on 01/12/2012 at 03:10.
Pushed by bennihill into branch 'master'.

Fixed bug 301392: "birds-eye view extends to above the window when
viewing a very tall image"
REVIEW: 107538
FIXED-IN: 4.10

M  +16   -2    lib/documentview/birdeyeview.cpp

http://commits.kde.org/gwenview/a1b818def1e77c82fba7379cd4a5c589b0bf1896
Comment 5 Benni Hill 2013-01-23 15:34:10 UTC
*** Bug 313738 has been marked as a duplicate of this bug. ***