Fixed bug 301392: "birds-eye view extends to above the window when viewing a very tall image"

BUG: 301392
REVIEW: 107538
FIXED-IN: 4.10